// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SelectNetwork should render 1`] = `
<div>
  <div>
    <div
      aria-expanded="false"
      aria-haspopup="listbox"
      aria-owns="downshift-0-menu"
      data-testid="SelectNetwork"
      role="combobox"
    >
      <label
        for="downshift-0-input"
        id="downshift-0-label"
      />
      <div
        class="Input__InputWrapperStyled-wu99qs-0 jYUFQr"
      >
        <div
          class="Circle__CircleWrapper-uw7h4j-0 grnDUY border-theme-secondary-200 dark:border-theme-secondary-700 text-theme-secondary-500 ring-theme-background"
          data-testid="SelectNetworkInput__network"
        />
        <div
          class="relative flex flex-1 h-full"
        >
          <input
            aria-autocomplete="list"
            aria-controls="downshift-0-menu"
            aria-labelledby="downshift-0-label"
            autocomplete="off"
            class="Input__InputStyled-wu99qs-1 ioFtLo p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
            data-testid="SelectNetworkInput__input"
            id="downshift-0-input"
            placeholder="Enter a cryptoasset name"
            value=""
          />
          
        </div>
      </div>
    </div>
    <div
      class=""
      data-testid="SelectNetwork__options"
    >
      <div
        class=""
      >
        <ul
          aria-labelledby="downshift-0-label"
          class="grid grid-cols-6 gap-3"
          id="downshift-0-menu"
          role="listbox"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`SelectNetwork should render with hidden options 1`] = `
<div>
  <div>
    <div
      aria-expanded="false"
      aria-haspopup="listbox"
      aria-owns="downshift-4-menu"
      data-testid="SelectNetwork"
      role="combobox"
    >
      <label
        for="downshift-4-input"
        id="downshift-4-label"
      />
      <div
        class="Input__InputWrapperStyled-wu99qs-0 jYUFQr"
      >
        <div
          class="Circle__CircleWrapper-uw7h4j-0 grnDUY border-theme-secondary-200 dark:border-theme-secondary-700 text-theme-secondary-500 ring-theme-background"
          data-testid="SelectNetworkInput__network"
        />
        <div
          class="relative flex flex-1 h-full"
        >
          <input
            aria-autocomplete="list"
            aria-controls="downshift-4-menu"
            aria-labelledby="downshift-4-label"
            autocomplete="off"
            class="Input__InputStyled-wu99qs-1 ioFtLo p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
            data-testid="SelectNetworkInput__input"
            id="downshift-4-input"
            placeholder="Enter a cryptoasset name"
            value=""
          />
          
        </div>
      </div>
    </div>
    <div
      class="hidden"
      data-testid="SelectNetwork__options"
    >
      <div
        class="mt-6"
      >
        <div
          class="mb-3 text-sm font-bold text-theme-secondary-400 dark:text-theme-secondary-700"
        >
          PUBLIC NETWORKS
        </div>
        <ul
          aria-labelledby="downshift-4-label"
          class="grid grid-cols-6 gap-3"
          id="downshift-4-menu"
          role="listbox"
        >
          <li
            class="inline-block cursor-pointer h-21"
            data-testid="SelectNetwork__NetworkIcon--container"
          >
            <div
              aria-label="ARK"
              class="w-full h-full flex justify-center items-center border-2 rounded-xl border-theme-primary-100 dark:border-theme-secondary-800 text-theme-secondary-700"
              data-testid="NetworkIcon-ARK-ark.mainnet"
            >
              <div
                class="sc-bdfBwQ caqoGN"
                data-testid="NetworkIcon__icon"
                height="30"
                width="30"
              >
                <svg>
                  ark.svg
                </svg>
              </div>
            </div>
          </li>
          <li
            class="inline-block cursor-pointer h-21"
            data-testid="SelectNetwork__NetworkIcon--container"
          >
            <div
              aria-label="Compendia"
              class="w-full h-full flex justify-center items-center border-2 rounded-xl border-theme-primary-100 dark:border-theme-secondary-800 text-theme-secondary-700"
              data-testid="NetworkIcon-ARK-compendia.mainnet"
            >
              <div
                class="sc-bdfBwQ caqoGN"
                data-testid="NetworkIcon__icon"
                height="30"
                width="30"
              >
                <svg>
                  bind.svg
                </svg>
              </div>
            </div>
          </li>
          <li
            class="inline-block cursor-pointer h-21"
            data-testid="SelectNetwork__NetworkIcon--container"
          >
            <div
              aria-label="Cosmos"
              class="w-full h-full flex justify-center items-center border-2 rounded-xl border-theme-primary-100 dark:border-theme-secondary-800 text-theme-secondary-700"
              data-testid="NetworkIcon-ATOM-atom.mainnet"
            >
              <div
                class="sc-bdfBwQ caqoGN"
                data-testid="NetworkIcon__icon"
                height="30"
                width="30"
              >
                <svg>
                  atom.svg
                </svg>
              </div>
            </div>
          </li>
          <li
            class="inline-block cursor-pointer h-21"
            data-testid="SelectNetwork__NetworkIcon--container"
          >
            <div
              aria-label="Bitcoin"
              class="w-full h-full flex justify-center items-center border-2 rounded-xl border-theme-primary-100 dark:border-theme-secondary-800 text-theme-secondary-700"
              data-testid="NetworkIcon-BTC-btc.livenet"
            >
              <div
                class="sc-bdfBwQ caqoGN"
                data-testid="NetworkIcon__icon"
                height="30"
                width="30"
              >
                <svg>
                  btc.svg
                </svg>
              </div>
            </div>
          </li>
          <li
            class="inline-block cursor-pointer h-21"
            data-testid="SelectNetwork__NetworkIcon--container"
          >
            <div
              aria-label="Elrond"
              class="w-full h-full flex justify-center items-center border-2 rounded-xl border-theme-primary-100 dark:border-theme-secondary-800 text-theme-secondary-700"
              data-testid="NetworkIcon-EGLD-egld.mainnet"
            >
              <div
                class="sc-bdfBwQ caqoGN"
                data-testid="NetworkIcon__icon"
                height="30"
                width="30"
              >
                <svg>
                  egld.svg
                </svg>
              </div>
            </div>
          </li>
          <li
            class="inline-block cursor-pointer h-21"
            data-testid="SelectNetwork__NetworkIcon--container"
          >
            <div
              aria-label="Ethereum"
              class="w-full h-full flex justify-center items-center border-2 rounded-xl border-theme-primary-100 dark:border-theme-secondary-800 text-theme-secondary-700"
              data-testid="NetworkIcon-ETH-eth.mainnet"
            >
              <div
                class="sc-bdfBwQ caqoGN"
                data-testid="NetworkIcon__icon"
                height="30"
                width="30"
              >
                <svg>
                  eth.svg
                </svg>
              </div>
            </div>
          </li>
          <li
            class="inline-block cursor-pointer h-21"
            data-testid="SelectNetwork__NetworkIcon--container"
          >
            <div
              aria-label="Lisk"
              class="w-full h-full flex justify-center items-center border-2 rounded-xl border-theme-primary-100 dark:border-theme-secondary-800 text-theme-secondary-700"
              data-testid="NetworkIcon-LSK-lsk.mainnet"
            >
              <div
                class="sc-bdfBwQ caqoGN"
                data-testid="NetworkIcon__icon"
                height="30"
                width="30"
              >
                <svg>
                  lsk.svg
                </svg>
              </div>
            </div>
          </li>
          <li
            class="inline-block cursor-pointer h-21"
            data-testid="SelectNetwork__NetworkIcon--container"
          >
            <div
              aria-label="NEO"
              class="w-full h-full flex justify-center items-center border-2 rounded-xl border-theme-primary-100 dark:border-theme-secondary-800 text-theme-secondary-700"
              data-testid="NetworkIcon-NEO-neo.mainnet"
            >
              <div
                class="sc-bdfBwQ caqoGN"
                data-testid="NetworkIcon__icon"
                height="30"
                width="30"
              >
                <svg>
                  neo.svg
                </svg>
              </div>
            </div>
          </li>
          <li
            class="inline-block cursor-pointer h-21"
            data-testid="SelectNetwork__NetworkIcon--container"
          >
            <div
              aria-label="Tron"
              class="w-full h-full flex justify-center items-center border-2 rounded-xl border-theme-primary-100 dark:border-theme-secondary-800 text-theme-secondary-700"
              data-testid="NetworkIcon-TRX-trx.mainnet"
            >
              <div
                class="sc-bdfBwQ caqoGN"
                data-testid="NetworkIcon__icon"
                height="30"
                width="30"
              >
                <svg>
                  trx.svg
                </svg>
              </div>
            </div>
          </li>
          <li
            class="inline-block cursor-pointer h-21"
            data-testid="SelectNetwork__NetworkIcon--container"
          >
            <div
              aria-label="Stellar"
              class="w-full h-full flex justify-center items-center border-2 rounded-xl border-theme-primary-100 dark:border-theme-secondary-800 text-theme-secondary-700"
              data-testid="NetworkIcon-XLM-xlm.mainnet"
            >
              <div
                class="sc-bdfBwQ caqoGN"
                data-testid="NetworkIcon__icon"
                height="30"
                width="30"
              >
                <svg>
                  xlm.svg
                </svg>
              </div>
            </div>
          </li>
          <li
            class="inline-block cursor-pointer h-21"
            data-testid="SelectNetwork__NetworkIcon--container"
          >
            <div
              aria-label="Ripple"
              class="w-full h-full flex justify-center items-center border-2 rounded-xl border-theme-primary-100 dark:border-theme-secondary-800 text-theme-secondary-700"
              data-testid="NetworkIcon-XRP-xrp.mainnet"
            >
              <div
                class="sc-bdfBwQ caqoGN"
                data-testid="NetworkIcon__icon"
                height="30"
                width="30"
              >
                <svg>
                  xrp.svg
                </svg>
              </div>
            </div>
          </li>
          <li
            class="inline-block cursor-pointer h-21"
            data-testid="SelectNetwork__NetworkIcon--container"
          >
            <div
              aria-label="Zilliqa"
              class="w-full h-full flex justify-center items-center border-2 rounded-xl border-theme-primary-100 dark:border-theme-secondary-800 text-theme-secondary-700"
              data-testid="NetworkIcon-ZIL-zil.mainnet"
            >
              <div
                class="sc-bdfBwQ caqoGN"
                data-testid="NetworkIcon__icon"
                height="30"
                width="30"
              >
                <svg>
                  zil.svg
                </svg>
              </div>
            </div>
          </li>
        </ul>
      </div>
      <div
        class="mt-6"
      >
        <div
          class="mb-3 text-sm font-bold text-theme-secondary-400 dark:text-theme-secondary-700"
        >
          DEVELOPMENT NETWORKS
        </div>
        <ul
          aria-labelledby="downshift-4-label"
          class="grid grid-cols-6 gap-3"
          id="downshift-4-menu"
          role="listbox"
        >
          <li
            class="inline-block cursor-pointer h-21"
            data-testid="SelectNetwork__NetworkIcon--container"
          >
            <div
              aria-label="ARK Devnet"
              class="w-full h-full flex justify-center items-center border-2 rounded-xl border-theme-primary-100 dark:border-theme-secondary-800 text-theme-primary-300"
              data-testid="NetworkIcon-ARK-ark.devnet"
            >
              <div
                class="sc-bdfBwQ caqoGN"
                data-testid="NetworkIcon__icon"
                height="30"
                width="30"
              >
                <svg>
                  ark.svg
                </svg>
              </div>
            </div>
          </li>
          <li
            class="inline-block cursor-pointer h-21"
            data-testid="SelectNetwork__NetworkIcon--container"
          >
            <div
              aria-label="Cosmos Testnet"
              class="w-full h-full flex justify-center items-center border-2 rounded-xl border-theme-primary-100 dark:border-theme-secondary-800 text-theme-primary-300"
              data-testid="NetworkIcon-ATOM-atom.testnet"
            >
              <div
                class="sc-bdfBwQ caqoGN"
                data-testid="NetworkIcon__icon"
                height="30"
                width="30"
              >
                <svg>
                  atom.svg
                </svg>
              </div>
            </div>
          </li>
          <li
            class="inline-block cursor-pointer h-21"
            data-testid="SelectNetwork__NetworkIcon--container"
          >
            <div
              aria-label="Bitcoin Testnet"
              class="w-full h-full flex justify-center items-center border-2 rounded-xl border-theme-primary-100 dark:border-theme-secondary-800 text-theme-primary-300"
              data-testid="NetworkIcon-BTC-btc.testnet"
            >
              <div
                class="sc-bdfBwQ caqoGN"
                data-testid="NetworkIcon__icon"
                height="30"
                width="30"
              >
                <svg>
                  btc.svg
                </svg>
              </div>
            </div>
          </li>
          <li
            class="inline-block cursor-pointer h-21"
            data-testid="SelectNetwork__NetworkIcon--container"
          >
            <div
              aria-label="Elrond Testnet"
              class="w-full h-full flex justify-center items-center border-2 rounded-xl border-theme-primary-100 dark:border-theme-secondary-800 text-theme-primary-300"
              data-testid="NetworkIcon-EGLD-egld.testnet"
            >
              <div
                class="sc-bdfBwQ caqoGN"
                data-testid="NetworkIcon__icon"
                height="30"
                width="30"
              >
                <svg>
                  egld.svg
                </svg>
              </div>
            </div>
          </li>
          <li
            class="inline-block cursor-pointer h-21"
            data-testid="SelectNetwork__NetworkIcon--container"
          >
            <div
              aria-label="Ethereum Rinkeby"
              class="w-full h-full flex justify-center items-center border-2 rounded-xl border-theme-primary-100 dark:border-theme-secondary-800 text-theme-primary-300"
              data-testid="NetworkIcon-ETH-eth.rinkeby"
            >
              <div
                class="sc-bdfBwQ caqoGN"
                data-testid="NetworkIcon__icon"
                height="30"
                width="30"
              >
                <svg>
                  eth.svg
                </svg>
              </div>
            </div>
          </li>
          <li
            class="inline-block cursor-pointer h-21"
            data-testid="SelectNetwork__NetworkIcon--container"
          >
            <div
              aria-label="Ethereum Ropsten"
              class="w-full h-full flex justify-center items-center border-2 rounded-xl border-theme-primary-100 dark:border-theme-secondary-800 text-theme-primary-300"
              data-testid="NetworkIcon-ETH-eth.ropsten"
            >
              <div
                class="sc-bdfBwQ caqoGN"
                data-testid="NetworkIcon__icon"
                height="30"
                width="30"
              >
                <svg>
                  eth.svg
                </svg>
              </div>
            </div>
          </li>
          <li
            class="inline-block cursor-pointer h-21"
            data-testid="SelectNetwork__NetworkIcon--container"
          >
            <div
              aria-label="Lisk Testnet"
              class="w-full h-full flex justify-center items-center border-2 rounded-xl border-theme-primary-100 dark:border-theme-secondary-800 text-theme-primary-300"
              data-testid="NetworkIcon-LSK-lsk.testnet"
            >
              <div
                class="sc-bdfBwQ caqoGN"
                data-testid="NetworkIcon__icon"
                height="30"
                width="30"
              >
                <svg>
                  lsk.svg
                </svg>
              </div>
            </div>
          </li>
          <li
            class="inline-block cursor-pointer h-21"
            data-testid="SelectNetwork__NetworkIcon--container"
          >
            <div
              aria-label="NEO Testnet"
              class="w-full h-full flex justify-center items-center border-2 rounded-xl border-theme-primary-100 dark:border-theme-secondary-800 text-theme-primary-300"
              data-testid="NetworkIcon-NEO-neo.testnet"
            >
              <div
                class="sc-bdfBwQ caqoGN"
                data-testid="NetworkIcon__icon"
                height="30"
                width="30"
              >
                <svg>
                  neo.svg
                </svg>
              </div>
            </div>
          </li>
          <li
            class="inline-block cursor-pointer h-21"
            data-testid="SelectNetwork__NetworkIcon--container"
          >
            <div
              aria-label="Tron Testnet"
              class="w-full h-full flex justify-center items-center border-2 rounded-xl border-theme-primary-100 dark:border-theme-secondary-800 text-theme-primary-300"
              data-testid="NetworkIcon-TRX-trx.testnet"
            >
              <div
                class="sc-bdfBwQ caqoGN"
                data-testid="NetworkIcon__icon"
                height="30"
                width="30"
              >
                <svg>
                  trx.svg
                </svg>
              </div>
            </div>
          </li>
          <li
            class="inline-block cursor-pointer h-21"
            data-testid="SelectNetwork__NetworkIcon--container"
          >
            <div
              aria-label="Stellar Testnet"
              class="w-full h-full flex justify-center items-center border-2 rounded-xl border-theme-primary-100 dark:border-theme-secondary-800 text-theme-primary-300"
              data-testid="NetworkIcon-XLM-xlm.testnet"
            >
              <div
                class="sc-bdfBwQ caqoGN"
                data-testid="NetworkIcon__icon"
                height="30"
                width="30"
              >
                <svg>
                  xlm.svg
                </svg>
              </div>
            </div>
          </li>
          <li
            class="inline-block cursor-pointer h-21"
            data-testid="SelectNetwork__NetworkIcon--container"
          >
            <div
              aria-label="Ripple Testnet"
              class="w-full h-full flex justify-center items-center border-2 rounded-xl border-theme-primary-100 dark:border-theme-secondary-800 text-theme-primary-300"
              data-testid="NetworkIcon-XRP-xrp.testnet"
            >
              <div
                class="sc-bdfBwQ caqoGN"
                data-testid="NetworkIcon__icon"
                height="30"
                width="30"
              >
                <svg>
                  xrp.svg
                </svg>
              </div>
            </div>
          </li>
          <li
            class="inline-block cursor-pointer h-21"
            data-testid="SelectNetwork__NetworkIcon--container"
          >
            <div
              aria-label="Zilliqa Testnet"
              class="w-full h-full flex justify-center items-center border-2 rounded-xl border-theme-primary-100 dark:border-theme-secondary-800 text-theme-primary-300"
              data-testid="NetworkIcon-ZIL-zil.testnet"
            >
              <div
                class="sc-bdfBwQ caqoGN"
                data-testid="NetworkIcon__icon"
                height="30"
                width="30"
              >
                <svg>
                  zil.svg
                </svg>
              </div>
            </div>
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`SelectNetwork should render with networks 1`] = `
<div>
  <div>
    <div
      aria-expanded="false"
      aria-haspopup="listbox"
      aria-owns="downshift-2-menu"
      data-testid="SelectNetwork"
      role="combobox"
    >
      <label
        for="downshift-2-input"
        id="downshift-2-label"
      />
      <div
        class="Input__InputWrapperStyled-wu99qs-0 jYUFQr"
      >
        <div
          class="Circle__CircleWrapper-uw7h4j-0 grnDUY border-theme-secondary-200 dark:border-theme-secondary-700 text-theme-secondary-500 ring-theme-background"
          data-testid="SelectNetworkInput__network"
        />
        <div
          class="relative flex flex-1 h-full"
        >
          <input
            aria-autocomplete="list"
            aria-controls="downshift-2-menu"
            aria-labelledby="downshift-2-label"
            autocomplete="off"
            class="Input__InputStyled-wu99qs-1 ioFtLo p-0 border-none bg-transparent focus:ring-0 no-ligatures w-full"
            data-testid="SelectNetworkInput__input"
            id="downshift-2-input"
            placeholder="Enter a cryptoasset name"
            value=""
          />
          
        </div>
      </div>
    </div>
    <div
      class=""
      data-testid="SelectNetwork__options"
    >
      <div
        class="mt-6"
      >
        <div
          class="mb-3 text-sm font-bold text-theme-secondary-400 dark:text-theme-secondary-700"
        >
          PUBLIC NETWORKS
        </div>
        <ul
          aria-labelledby="downshift-2-label"
          class="grid grid-cols-6 gap-3"
          id="downshift-2-menu"
          role="listbox"
        >
          <li
            class="inline-block cursor-pointer h-21"
            data-testid="SelectNetwork__NetworkIcon--container"
          >
            <div
              aria-label="ARK"
              class="w-full h-full flex justify-center items-center border-2 rounded-xl border-theme-primary-100 dark:border-theme-secondary-800 text-theme-secondary-700"
              data-testid="NetworkIcon-ARK-ark.mainnet"
            >
              <div
                class="sc-bdfBwQ caqoGN"
                data-testid="NetworkIcon__icon"
                height="30"
                width="30"
              >
                <svg>
                  ark.svg
                </svg>
              </div>
            </div>
          </li>
          <li
            class="inline-block cursor-pointer h-21"
            data-testid="SelectNetwork__NetworkIcon--container"
          >
            <div
              aria-label="Compendia"
              class="w-full h-full flex justify-center items-center border-2 rounded-xl border-theme-primary-100 dark:border-theme-secondary-800 text-theme-secondary-700"
              data-testid="NetworkIcon-ARK-compendia.mainnet"
            >
              <div
                class="sc-bdfBwQ caqoGN"
                data-testid="NetworkIcon__icon"
                height="30"
                width="30"
              >
                <svg>
                  bind.svg
                </svg>
              </div>
            </div>
          </li>
          <li
            class="inline-block cursor-pointer h-21"
            data-testid="SelectNetwork__NetworkIcon--container"
          >
            <div
              aria-label="Cosmos"
              class="w-full h-full flex justify-center items-center border-2 rounded-xl border-theme-primary-100 dark:border-theme-secondary-800 text-theme-secondary-700"
              data-testid="NetworkIcon-ATOM-atom.mainnet"
            >
              <div
                class="sc-bdfBwQ caqoGN"
                data-testid="NetworkIcon__icon"
                height="30"
                width="30"
              >
                <svg>
                  atom.svg
                </svg>
              </div>
            </div>
          </li>
          <li
            class="inline-block cursor-pointer h-21"
            data-testid="SelectNetwork__NetworkIcon--container"
          >
            <div
              aria-label="Bitcoin"
              class="w-full h-full flex justify-center items-center border-2 rounded-xl border-theme-primary-100 dark:border-theme-secondary-800 text-theme-secondary-700"
              data-testid="NetworkIcon-BTC-btc.livenet"
            >
              <div
                class="sc-bdfBwQ caqoGN"
                data-testid="NetworkIcon__icon"
                height="30"
                width="30"
              >
                <svg>
                  btc.svg
                </svg>
              </div>
            </div>
          </li>
          <li
            class="inline-block cursor-pointer h-21"
            data-testid="SelectNetwork__NetworkIcon--container"
          >
            <div
              aria-label="Elrond"
              class="w-full h-full flex justify-center items-center border-2 rounded-xl border-theme-primary-100 dark:border-theme-secondary-800 text-theme-secondary-700"
              data-testid="NetworkIcon-EGLD-egld.mainnet"
            >
              <div
                class="sc-bdfBwQ caqoGN"
                data-testid="NetworkIcon__icon"
                height="30"
                width="30"
              >
                <svg>
                  egld.svg
                </svg>
              </div>
            </div>
          </li>
          <li
            class="inline-block cursor-pointer h-21"
            data-testid="SelectNetwork__NetworkIcon--container"
          >
            <div
              aria-label="Ethereum"
              class="w-full h-full flex justify-center items-center border-2 rounded-xl border-theme-primary-100 dark:border-theme-secondary-800 text-theme-secondary-700"
              data-testid="NetworkIcon-ETH-eth.mainnet"
            >
              <div
                class="sc-bdfBwQ caqoGN"
                data-testid="NetworkIcon__icon"
                height="30"
                width="30"
              >
                <svg>
                  eth.svg
                </svg>
              </div>
            </div>
          </li>
          <li
            class="inline-block cursor-pointer h-21"
            data-testid="SelectNetwork__NetworkIcon--container"
          >
            <div
              aria-label="Lisk"
              class="w-full h-full flex justify-center items-center border-2 rounded-xl border-theme-primary-100 dark:border-theme-secondary-800 text-theme-secondary-700"
              data-testid="NetworkIcon-LSK-lsk.mainnet"
            >
              <div
                class="sc-bdfBwQ caqoGN"
                data-testid="NetworkIcon__icon"
                height="30"
                width="30"
              >
                <svg>
                  lsk.svg
                </svg>
              </div>
            </div>
          </li>
          <li
            class="inline-block cursor-pointer h-21"
            data-testid="SelectNetwork__NetworkIcon--container"
          >
            <div
              aria-label="NEO"
              class="w-full h-full flex justify-center items-center border-2 rounded-xl border-theme-primary-100 dark:border-theme-secondary-800 text-theme-secondary-700"
              data-testid="NetworkIcon-NEO-neo.mainnet"
            >
              <div
                class="sc-bdfBwQ caqoGN"
                data-testid="NetworkIcon__icon"
                height="30"
                width="30"
              >
                <svg>
                  neo.svg
                </svg>
              </div>
            </div>
          </li>
          <li
            class="inline-block cursor-pointer h-21"
            data-testid="SelectNetwork__NetworkIcon--container"
          >
            <div
              aria-label="Tron"
              class="w-full h-full flex justify-center items-center border-2 rounded-xl border-theme-primary-100 dark:border-theme-secondary-800 text-theme-secondary-700"
              data-testid="NetworkIcon-TRX-trx.mainnet"
            >
              <div
                class="sc-bdfBwQ caqoGN"
                data-testid="NetworkIcon__icon"
                height="30"
                width="30"
              >
                <svg>
                  trx.svg
                </svg>
              </div>
            </div>
          </li>
          <li
            class="inline-block cursor-pointer h-21"
            data-testid="SelectNetwork__NetworkIcon--container"
          >
            <div
              aria-label="Stellar"
              class="w-full h-full flex justify-center items-center border-2 rounded-xl border-theme-primary-100 dark:border-theme-secondary-800 text-theme-secondary-700"
              data-testid="NetworkIcon-XLM-xlm.mainnet"
            >
              <div
                class="sc-bdfBwQ caqoGN"
                data-testid="NetworkIcon__icon"
                height="30"
                width="30"
              >
                <svg>
                  xlm.svg
                </svg>
              </div>
            </div>
          </li>
          <li
            class="inline-block cursor-pointer h-21"
            data-testid="SelectNetwork__NetworkIcon--container"
          >
            <div
              aria-label="Ripple"
              class="w-full h-full flex justify-center items-center border-2 rounded-xl border-theme-primary-100 dark:border-theme-secondary-800 text-theme-secondary-700"
              data-testid="NetworkIcon-XRP-xrp.mainnet"
            >
              <div
                class="sc-bdfBwQ caqoGN"
                data-testid="NetworkIcon__icon"
                height="30"
                width="30"
              >
                <svg>
                  xrp.svg
                </svg>
              </div>
            </div>
          </li>
          <li
            class="inline-block cursor-pointer h-21"
            data-testid="SelectNetwork__NetworkIcon--container"
          >
            <div
              aria-label="Zilliqa"
              class="w-full h-full flex justify-center items-center border-2 rounded-xl border-theme-primary-100 dark:border-theme-secondary-800 text-theme-secondary-700"
              data-testid="NetworkIcon-ZIL-zil.mainnet"
            >
              <div
                class="sc-bdfBwQ caqoGN"
                data-testid="NetworkIcon__icon"
                height="30"
                width="30"
              >
                <svg>
                  zil.svg
                </svg>
              </div>
            </div>
          </li>
        </ul>
      </div>
      <div
        class="mt-6"
      >
        <div
          class="mb-3 text-sm font-bold text-theme-secondary-400 dark:text-theme-secondary-700"
        >
          DEVELOPMENT NETWORKS
        </div>
        <ul
          aria-labelledby="downshift-2-label"
          class="grid grid-cols-6 gap-3"
          id="downshift-2-menu"
          role="listbox"
        >
          <li
            class="inline-block cursor-pointer h-21"
            data-testid="SelectNetwork__NetworkIcon--container"
          >
            <div
              aria-label="ARK Devnet"
              class="w-full h-full flex justify-center items-center border-2 rounded-xl border-theme-primary-100 dark:border-theme-secondary-800 text-theme-primary-300"
              data-testid="NetworkIcon-ARK-ark.devnet"
            >
              <div
                class="sc-bdfBwQ caqoGN"
                data-testid="NetworkIcon__icon"
                height="30"
                width="30"
              >
                <svg>
                  ark.svg
                </svg>
              </div>
            </div>
          </li>
          <li
            class="inline-block cursor-pointer h-21"
            data-testid="SelectNetwork__NetworkIcon--container"
          >
            <div
              aria-label="Cosmos Testnet"
              class="w-full h-full flex justify-center items-center border-2 rounded-xl border-theme-primary-100 dark:border-theme-secondary-800 text-theme-primary-300"
              data-testid="NetworkIcon-ATOM-atom.testnet"
            >
              <div
                class="sc-bdfBwQ caqoGN"
                data-testid="NetworkIcon__icon"
                height="30"
                width="30"
              >
                <svg>
                  atom.svg
                </svg>
              </div>
            </div>
          </li>
          <li
            class="inline-block cursor-pointer h-21"
            data-testid="SelectNetwork__NetworkIcon--container"
          >
            <div
              aria-label="Bitcoin Testnet"
              class="w-full h-full flex justify-center items-center border-2 rounded-xl border-theme-primary-100 dark:border-theme-secondary-800 text-theme-primary-300"
              data-testid="NetworkIcon-BTC-btc.testnet"
            >
              <div
                class="sc-bdfBwQ caqoGN"
                data-testid="NetworkIcon__icon"
                height="30"
                width="30"
              >
                <svg>
                  btc.svg
                </svg>
              </div>
            </div>
          </li>
          <li
            class="inline-block cursor-pointer h-21"
            data-testid="SelectNetwork__NetworkIcon--container"
          >
            <div
              aria-label="Elrond Testnet"
              class="w-full h-full flex justify-center items-center border-2 rounded-xl border-theme-primary-100 dark:border-theme-secondary-800 text-theme-primary-300"
              data-testid="NetworkIcon-EGLD-egld.testnet"
            >
              <div
                class="sc-bdfBwQ caqoGN"
                data-testid="NetworkIcon__icon"
                height="30"
                width="30"
              >
                <svg>
                  egld.svg
                </svg>
              </div>
            </div>
          </li>
          <li
            class="inline-block cursor-pointer h-21"
            data-testid="SelectNetwork__NetworkIcon--container"
          >
            <div
              aria-label="Ethereum Rinkeby"
              class="w-full h-full flex justify-center items-center border-2 rounded-xl border-theme-primary-100 dark:border-theme-secondary-800 text-theme-primary-300"
              data-testid="NetworkIcon-ETH-eth.rinkeby"
            >
              <div
                class="sc-bdfBwQ caqoGN"
                data-testid="NetworkIcon__icon"
                height="30"
                width="30"
              >
                <svg>
                  eth.svg
                </svg>
              </div>
            </div>
          </li>
          <li
            class="inline-block cursor-pointer h-21"
            data-testid="SelectNetwork__NetworkIcon--container"
          >
            <div
              aria-label="Ethereum Ropsten"
              class="w-full h-full flex justify-center items-center border-2 rounded-xl border-theme-primary-100 dark:border-theme-secondary-800 text-theme-primary-300"
              data-testid="NetworkIcon-ETH-eth.ropsten"
            >
              <div
                class="sc-bdfBwQ caqoGN"
                data-testid="NetworkIcon__icon"
                height="30"
                width="30"
              >
                <svg>
                  eth.svg
                </svg>
              </div>
            </div>
          </li>
          <li
            class="inline-block cursor-pointer h-21"
            data-testid="SelectNetwork__NetworkIcon--container"
          >
            <div
              aria-label="Lisk Testnet"
              class="w-full h-full flex justify-center items-center border-2 rounded-xl border-theme-primary-100 dark:border-theme-secondary-800 text-theme-primary-300"
              data-testid="NetworkIcon-LSK-lsk.testnet"
            >
              <div
                class="sc-bdfBwQ caqoGN"
                data-testid="NetworkIcon__icon"
                height="30"
                width="30"
              >
                <svg>
                  lsk.svg
                </svg>
              </div>
            </div>
          </li>
          <li
            class="inline-block cursor-pointer h-21"
            data-testid="SelectNetwork__NetworkIcon--container"
          >
            <div
              aria-label="NEO Testnet"
              class="w-full h-full flex justify-center items-center border-2 rounded-xl border-theme-primary-100 dark:border-theme-secondary-800 text-theme-primary-300"
              data-testid="NetworkIcon-NEO-neo.testnet"
            >
              <div
                class="sc-bdfBwQ caqoGN"
                data-testid="NetworkIcon__icon"
                height="30"
                width="30"
              >
                <svg>
                  neo.svg
                </svg>
              </div>
            </div>
          </li>
          <li
            class="inline-block cursor-pointer h-21"
            data-testid="SelectNetwork__NetworkIcon--container"
          >
            <div
              aria-label="Tron Testnet"
              class="w-full h-full flex justify-center items-center border-2 rounded-xl border-theme-primary-100 dark:border-theme-secondary-800 text-theme-primary-300"
              data-testid="NetworkIcon-TRX-trx.testnet"
            >
              <div
                class="sc-bdfBwQ caqoGN"
                data-testid="NetworkIcon__icon"
                height="30"
                width="30"
              >
                <svg>
                  trx.svg
                </svg>
              </div>
            </div>
          </li>
          <li
            class="inline-block cursor-pointer h-21"
            data-testid="SelectNetwork__NetworkIcon--container"
          >
            <div
              aria-label="Stellar Testnet"
              class="w-full h-full flex justify-center items-center border-2 rounded-xl border-theme-primary-100 dark:border-theme-secondary-800 text-theme-primary-300"
              data-testid="NetworkIcon-XLM-xlm.testnet"
            >
              <div
                class="sc-bdfBwQ caqoGN"
                data-testid="NetworkIcon__icon"
                height="30"
                width="30"
              >
                <svg>
                  xlm.svg
                </svg>
              </div>
            </div>
          </li>
          <li
            class="inline-block cursor-pointer h-21"
            data-testid="SelectNetwork__NetworkIcon--container"
          >
            <div
              aria-label="Ripple Testnet"
              class="w-full h-full flex justify-center items-center border-2 rounded-xl border-theme-primary-100 dark:border-theme-secondary-800 text-theme-primary-300"
              data-testid="NetworkIcon-XRP-xrp.testnet"
            >
              <div
                class="sc-bdfBwQ caqoGN"
                data-testid="NetworkIcon__icon"
                height="30"
                width="30"
              >
                <svg>
                  xrp.svg
                </svg>
              </div>
            </div>
          </li>
          <li
            class="inline-block cursor-pointer h-21"
            data-testid="SelectNetwork__NetworkIcon--container"
          >
            <div
              aria-label="Zilliqa Testnet"
              class="w-full h-full flex justify-center items-center border-2 rounded-xl border-theme-primary-100 dark:border-theme-secondary-800 text-theme-primary-300"
              data-testid="NetworkIcon-ZIL-zil.testnet"
            >
              <div
                class="sc-bdfBwQ caqoGN"
                data-testid="NetworkIcon__icon"
                height="30"
                width="30"
              >
                <svg>
                  zil.svg
                </svg>
              </div>
            </div>
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;
